# gitpilot

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.bat  build.ps1  installer.iss  quick-build.ps1
.github/workflows/: build-release.yml  pr-build.yml
src/: main.cpp
src/api/: ApiModels.cpp  ApiModels.h  GitLabApi.cpp  GitLabApi.h
src/automation/: BuildMonitor.cpp  BuildMonitor.h  WorkflowEngine.cpp  WorkflowEngine.h
src/config/: ConfigManager.cpp  ConfigManager.h  FontConfig.cpp  FontConfig.h
src/service/: GitService.cpp  GitService.h
src/ui/: FirstRunWizard.cpp  FirstRunWizard.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
src/utils/: Logger.cpp  Logger.h
src/views/: DatabaseBranchView.cpp  DatabaseBranchView.h  FeatureBranchView.cpp  FeatureBranchView.h  MainBranchView.cpp  MainBranchView.h  ProtectedBranchView.cpp  ProtectedBranchView.h
src/widgets/: BranchCreatorDialog.cpp  BranchCreatorDialog.h  BranchSwitchDialog.cpp  BranchSwitchDialog.h  DownloadLinkWidget.cpp  DownloadLinkWidget.h  MrZone.cpp  MrZone.h  MrZone_append.txt  MrZone_eventfilter.txt  PipelineTriggerDialog.cpp  PipelineTriggerDialog.h  ProgressDialog.cpp  ProgressDialog.h
